<resources>
    <string name="app_name">Journal App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="title_activity_manage_journal">Manage Journal</string>
    <string name="save">Save</string>
    <string name="write_something">Write something…</string>
    <string name="no_journals">You have no journal entries at the moment.</string>
    <string name="title">Journal Title…</string>
    <string name="mange_journal_title">Journal</string>
    <string name="title_activity_manage_labels">Manage Labels</string>

    <string name="title_activity_view_journal_fullscreen">View Journal</string>
    <string name="action_labels">Labels</string>


    <!-- Google Sign In -->
    <string name="g_id">g_id</string>
    <string name="g_email">g_email</string>
    <string name="g_firstName">g_firstName</string>
    <string name="g_lastName">g_lastName</string>

    <!-- Validation -->
    <string name="journal_title_required">Please enter a title for your journal.</string>
    <string name="journal_content_required">Please enter some content for your journal.</string>
    <string name="action_signout">Sign out</string>
    <string name="label_name">Label name</string>
    <string name="label_name_required">Please enter a label name.</string>
    <string name="error_login_failed">Oops… Something went wrong. Please check that a Google account is linked to this device.</string>
    <string name="add_label_to_journal">Add a Label</string>
    <string name="no_labels">No labels have been setup. Add labels through your menu items on the home page.</string>
    <string name="signed_in_message">Signed in as</string>
</resources>
